fix basics
